--- a/Website_v6/sidebar.css
+++ b/Website_v6/sidebar.css
@@ -37,9 +37,17 @@ a, a:hover, a:focus {
     box-shadow: none;
     outline: none !important;
     border: none;
+    z-index: 100;
+}
+
+.navbar-btn-map {
+    position: absolute;
+    box-shadow: none;
+    outline: none !important;
+    border: none;
     margin-left: 20px;
     margin-top: 20px;
-    z-index: 1;
+    z-index: 100;
 }
 
 .line {
@@ -64,7 +72,7 @@ a, a:hover, a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background: #202020;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -77,7 +85,7 @@ a, a:hover, a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #000;
 }
 
 #sidebar ul.components {
@@ -102,7 +110,7 @@ a, a:hover, a:focus {
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: #000;
 }
 /* ---------------------------------------------------
     CONTENT STYLE
