--- a/Website_v6/style.css
+++ b/Website_v6/style.css
@@ -41,8 +41,13 @@ html, body, figure {
 
 /* Default font and size */
 body {
-	font-family: sans-serif;
-	font-size: 1.1rem;
+	margin: 0;
+	background-color: #111;
+	font-family: "Yanone Kaffeesatz", sans-serif;
+	font-weight: 200;
+	font-size: 17px;
+	padding: 0;
+	height: 100%;
 }
 
 /*
@@ -86,43 +91,11 @@ h3 { font-size: 1.75rem; }
 h4 { font-size: 1.25rem; }
 
 /* Top navigation bar */
-nav {
+navtop {
 	width: 100%;
 	height: 7%;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-
-	background-color: var(--dark-background-color);
-}
-
-/* Make the links in the navbar bold */
-nav a {
-	font-weight: bold;
-	color: var(--theme-color-light);
-}
-
-/* Style of the list of links in the navbar */
-nav ul {
-	/* Clear defaults */
-	margin: 0;
-	padding: 0;
-
-	/* Remove list bullet points */
-	list-style-type: none;
-
-	/*
-	Flexbox is a modern mechanism for arranging elements
-		https://css-tricks.com/snippets/css/a-guide-to-flexbox/
-	This will arrange the elements in a row
-	*/
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: flex-start;
-}
-
-/* Space between links */
-nav li {
-	margin-right: 3rem;
 }
 
 
