--- a/Website/viz1.css
+++ b/Website/viz1.css
@@ -1,3 +1,9 @@
+:root {
+	--theme-color-light: rgb(220, 0, 0);
+	--theme-color-dark: rgb(160, 0, 0);
+ 	--dark-background-color: rgb(50, 50, 50);
+}
+
 html {
   height: 100%;
 }
@@ -5,6 +11,15 @@ html {
 a {
   color: white;
 }
+
+h1, h2, h3, h4, h5, h6
+{
+	color: var(--theme-color-dark);
+}
+h1 { font-size: 2rem; }
+h2 { font-size: 1.75rem; }
+h3 { font-size: 1.75rem; }
+h4 { font-size: 1.25rem; }
 
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
