--- a/Website/sidebar.css
+++ b/Website/sidebar.css
@@ -9,13 +9,15 @@ body {
     background: #fafafa;
 }
 
-p {
+p, ul, h1, h2, h3, h4, h5 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
 }
+
+
 
 a, a:hover, a:focus {
     color: inherit;
