--- a/Website/style.css
+++ b/Website/style.css
@@ -73,6 +73,8 @@ The various units of measurement available in CSS:
 	margin-right: auto;
 }
 
+/* Intro */
+
 #intro_text1,
 #intro_text2,
 #intro_text3 {
