--- a/Website/viz1.css
+++ b/Website/viz1.css
@@ -61,13 +61,39 @@ body {
 
 #countryInfo {
   position: absolute;
-  left: 50%;
+  left: 40%;
   top: 50%;
   transform: translate(-50%,-50%);
   background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
   opacity: 0;
   transition: 1s;
+	border-radius: 10px;
 }
+
+#legend {
+  position: absolute;
+  left: 80%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
+  opacity: 0;
+  transition: 1s;
+	z-index: 50;
+}
+
+#legend.show {
+	opacity: 1;
+	transition-duration: 4s;
+	transition-delay: 2s;
+	z-index:50;
+}
+
+#legend.hide {
+  opacity: 0;
+  transition-duration: 2s;
+  transition-delay: 500ms;
+  z-index:0;
+ }
 
 @media all and (max-width: 800px) {
   #countryInfo { width: 40%; }
