--- a/Website/viz2.css
+++ b/Website/viz2.css
@@ -1,65 +1,6 @@
-/* Dropdown Button
-.dropbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #3e8e41;
-}
-
-/* The search field
-#myInput {
-  box-sizing: border-box;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-/* The search field when it gets focus/clicked on
-#myInput:focus {outline: 3px solid #ddd;}
-
-/* The container <div> - needed to position the dropdown content
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default)
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f6f6f6;
-  min-width: 230px;
-  border: 1px solid #ddd;
-  z-index: 1;
-}
-
-/* Links inside the dropdown
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button)
-.show {display:block;}
-*/
-
 .checkbox-inline {
+	top: 50%;
+  transform: translateY(-50%);
 	padding-left: 0.5rem;
 	padding-right: 1.5rem;
 }
@@ -92,4 +33,27 @@ input {
 }
 #SA {
 	background-color: #02A371;
+}
+
+.container {
+  display: flex;
+	justify-content: center;
+	text-align: center;
+}
+
+#listTransaction {
+	margin-left: 15%;
+}
+
+#checkboxes {
+	height: 20px;
+	margin: 30px;
+	text-align: center;
+	transform: translateY(50%);
+}
+
+#StartViz2 {
+	position: relative;
+	text-align: center;
+	margin-bottom: 10px;
 }
