--- a/Website/viz2.css
+++ b/Website/viz2.css
@@ -56,4 +56,7 @@ input {
 	position: relative;
 	text-align: center;
 	margin-bottom: 10px;
+	left: 50%;
+	transform: translate(-50%, 0);
+	margin-top: 0px;
 }
