--- a/Website/viz1.css
+++ b/Website/viz1.css
@@ -64,7 +64,7 @@ body {
 	height: 110%; /* 90%; */
 	width: 65%;
   left: 40%;
-  top: 40%;
+  bottom: 50%;
   transform: translate(-50%,-50%);
   background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
   opacity: 0;
