--- a/Website/style.css
+++ b/Website/style.css
@@ -269,6 +269,7 @@ footer {
     margin-right: 20px;
 }
 
+/* Viz2 */
 #bubbleChart {
 	margin: auto;
 }
@@ -278,6 +279,7 @@ footer {
 	padding-left: auto;
 }
 
+/* Viz 2 buttons */
 select {
 	width: 240px;
 }
